<resources>
    <string name="app_name">TipXML</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="how_was_the_service">Tip Percentage</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string-array name="tip_options">
        <item>15%</item>
        <item>18%</item>
        <item>20%</item>
    </string-array>
</resources>